--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@aragon/api": "^1.1.0",
     "@aragon/api-react": "^1.0.0-beta.1",
-    "@aragon/ui": "^0.40.1",
+    "@aragon/ui": "^1.0.0-alpha.2",
+    "components": "^0.1.0",
     "core-js": "^3.1.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
