--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-    "@aragon/os": "^4.2.1",
     "@aragon/apps-shared-minime": "^1.0.1",
     "@aragon/apps-token-manager": "2.1.0",
-    "@aragon/apps-voting": "2.1.0"
+    "@aragon/apps-voting": "2.1.0",
+    "@aragon/os": "^4.2.1"
   },
   "devDependencies": {
     "@aragon/cli": "^5.9.7",
